--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="cont-content-1">
         <div class="cont-content-1-a">
-          <img src="./gtco logo.png" alt="" width="9%" height="9%">
+          <img src="./image/gtco logo.png" alt="" width="9%" height="9%">
         </div>
         <div class="cont-content-1-b">INTERNET BANKING</div>
       </div>
@@ -88,18 +88,18 @@
                   <div class="first-p">Please note that GTBank will NEVER ask you to provide your PIN (Personal Identification Numbers).</div> <br>
                   <a href="">READ MORE</a>
                 </div>
-                <img src="./gtb shield logo.JPG" alt="" width="28%" height="29%">
+                <img src="./image/gtb shield logo.JPG" alt="" width="28%" height="29%">
               </div>
               <div class="second">
                 <div class="h-bold"><b>Do you have a token?</b></div>
                 <div>Get a Token today and begin to carry out third party transfers and online payments.</div>
-                <div class="second-img"><img src="./gtb token.JPG" alt="" width="50%" height="50%"></div> <br>
+                <div class="second-img"><img src="./image/gtb token.JPG" alt="" width="50%" height="50%"></div> <br>
                 <a href="">GET YOURS</a>
               </div>
               <div class="third">
                 <div class="h-bold"><b>Account Transfers (Instant)</b></div>
                 <div>The fastest way to transfer money to other bank accounts</div>
-                <div class="third-img"><img src="./gtb naira logo.JPG" alt="" width="90%" height="100%"></div> <br>
+                <div class="third-img"><img src="./image/gtb naira logo.JPG" alt="" width="90%" height="100%"></div> <br>
                 <a href="">TRY IT TODAY</a>
               </div>
           </div>
@@ -107,12 +107,12 @@
         <div class="cont-content-2-b">
           <div class="cont-content-2-b-wrapper">
             <div class="cont-content-2-b-wrapper-img">
-              <img src="./gtb logo.png" alt="" width="35px" height="35px">
+              <img src="./image/gtb logo.png" alt="" width="35px" height="35px">
             </div>
             <div class="cont-content-2-b-wrapper-a">Two secure mobile options, one seamless experience.</div>
-            <img src="./gtb 2 mobile.JPG" alt="" width="270px" height="200px">
+            <img src="./image/gtb 2 mobile.JPG" alt="" width="270px" height="200px">
             <div class="cont-content-2-b-wrapper-b">Suspect a fraudulent site?</div>
-            <img src="./gtb laptop.JPG" alt="" width="250px" height="150px">
+            <img src="./image/gtb laptop.JPG" alt="" width="250px" height="150px">
             <div class="cont-content-2-b-wrapper-c">Please report to us by sending an email to</div>
             <div class="cont-content-2-b-wrapper-d">phishing@gmail.com</div>
           </div>
